@@ -2,8 +2,12 @@ package com.goorm.tablepick.domain.board.dto.response;
 
 import com.goorm.tablepick.domain.board.entity.Board;
 import com.goorm.tablepick.domain.board.entity.BoardImage;
+import com.goorm.tablepick.domain.restaurant.entity.Restaurant;
+import com.goorm.tablepick.domain.restaurant.entity.RestaurantCategory;
 import io.swagger.v3.oas.annotations.media.ArraySchema;
 import io.swagger.v3.oas.annotations.media.Schema;
+import java.time.LocalDateTime;
+import java.util.stream.Collectors;
 import lombok.*;
 
 import java.util.List;
@@ -14,7 +18,6 @@ import java.util.Objects;
 @NoArgsConstructor
 @AllArgsConstructor
 public class BoardListResponseDto {
-
     private Long id;
     private String content;
     private String restaurantName;
@@ -22,42 +25,28 @@ public class BoardListResponseDto {
     private String restaurantCategoryName;
     private String memberNickname;
     private String memberProfileImage;
+    private LocalDateTime createdAt;
 
     @ArraySchema(schema = @Schema(type = "string"))
     private List<String> tagNames;
 
     private String imageUrl;
 
-    public static BoardListResponseDto from(Board board) {
-
-        var reservation = board.getReservation();
-        var restaurant = (reservation != null) ? reservation.getRestaurant() : null;
-
+    public static BoardListResponseDto from(Board board, Restaurant restaurant, RestaurantCategory category) {
         return BoardListResponseDto.builder()
                 .id(board.getId())
                 .content(board.getContent())
-                .restaurantName(restaurant != null ? restaurant.getName() : null)
-                .restaurantAddress(restaurant != null ? restaurant.getAddress() : null)
-                .restaurantCategoryName(
-                        restaurant != null && restaurant.getRestaurantCategory() != null
-                                ? restaurant.getRestaurantCategory().getName()
-                                : null
-                )
+                .restaurantName(restaurant.getName())
+                .restaurantAddress(restaurant.getAddress())
+                .restaurantCategoryName(category.getName())
                 .memberNickname(board.getMember().getNickname())
                 .memberProfileImage(board.getMember().getProfileImage())
-                .imageUrl(
-                        board.getBoardImages().stream()
-                                .map(BoardImage::getImageUrl)
-                                .filter(Objects::nonNull)
-                                .findFirst()
-                                .orElse(null)
-                )
-                .tagNames(
-                        board.getBoardTags().stream()
-                                .map(tag -> tag.getTag().getName())
-                                .filter(Objects::nonNull)
-                                .toList()
-                )
+                .tagNames(board.getBoardTags().stream()
+                        .map(boardTag -> boardTag.getTag().getName())
+                        .collect(Collectors.toList()))
+                .imageUrl(board.getBoardImages().isEmpty() ? null :
+                        board.getBoardImages().getFirst().getImageUrl())
+                .createdAt(board.getCreatedAt())
                 .build();
     }
 }
